k8s/app-manifest/j26-platsbank/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-platsbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-platsbank
  template:
    metadata:
      labels:
        app: j26-platsbank
    spec:
      containers:
        - name: j26-platsbank-app
          image: ghcr.io/scouterna/j26-platsbank:latest
          ports:
            - containerPort: 3000
