k8s/app-manifest/j26-platsbank/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-platsbank
spec:
  selector:
    app: j26-platsbank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
