k8s/app-manifest/j26-platsbank/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-platsbank
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /_services/platsbank/$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /_services/platsbank(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-platsbank
                port:
                  number: 80
